--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -10,5 +10,5 @@ pref_validate_login=Validate
 pref_group_devAtCloud=DEV@cloud
 pref_enable_jaas=Access DEV@cloud Continuous Integration
 pref_enable_forge=Access Forge repositories (Git and SVN)
-pref_attach_nectar=<a>Attach Jenkins instances...</a>
-pref_attach_nectar_tooltip=Click here to attach Jenkins instances
+pref_attach_jenkins=<a>Attach Jenkins instances...</a>
+pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
