--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -12,3 +12,6 @@ pref_enable_jaas=Access DEV@cloud Continuous Integration
 pref_enable_forge=Access Forge repositories (Git and SVN)
 pref_attach_jenkins=<a>Attach Jenkins instances...</a>
 pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
+
+pref_group_allJenkins=All Jenkins
+pref_jenkins_refresh=Jobs refresh interval (seconds)
