refresh interval can be explicitly enabled/disabled

--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -14,4 +14,5 @@ pref_attach_jenkins=<a>Attach Jenkins instances...</a>
 pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
 
 pref_group_allJenkins=All Jenkins
-pref_jenkins_refresh=Jobs refresh interval (seconds)
+pref_jenkins_refresh_enabled=Enable Jobs view auto-refresh
+pref_jenkins_refresh_interval=Jobs refresh interval (seconds)
