* Removed hack that was working around the empty forge repos * Relayouted and renamed preferences "Attach jenkins..." link to avoid confusion * Includes all user accounts now when sync forge repos

--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -10,7 +10,7 @@ pref_validate_login=Validate
 pref_group_devAtCloud=DEV@cloud
 pref_enable_jaas=Access DEV@cloud Continuous Integration
 pref_enable_forge=Access Forge repositories (Git and SVN)
-pref_attach_jenkins=<a>Attach Jenkins instances...</a>
+pref_attach_jenkins=<a>Attach Jenkins instances NOT hosted at DEV@cloud...</a>
 pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
 
 pref_group_allJenkins=All Jenkins
