Fixed typo: hey -> They

--- a/README
+++ b/README
@@ -21,4 +21,4 @@ OR
 5. Install subversive/SVN from Helios update site 
 
 please do not use subclipse and eclipse.org subversive/SVN client at the same time. 
-hey don't work well together and are and not designed to do so.
+They don't work well together and are and not designed to do so.
