--- a/README
+++ b/README
@@ -20,5 +20,5 @@ Set it as Target Platform
 OR
 5. Install subversive/SVN from Helios update site 
 
-please do not use subclipse and eclipse.org subversive/SVN client at the same time. 
+Please do not use subclipse and eclipse.org subversive/SVN client at the same time. 
 They don't work well together and are not designed to do so.
