Added git ssh reminder to preferences.

--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -16,3 +16,5 @@ pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
 pref_group_allJenkins=All Jenkins
 pref_jenkins_refresh_enabled=Enable Jobs view auto-refresh
 pref_jenkins_refresh_interval=Jobs refresh interval (seconds)
+
+git_access_reminder=For GIT access make sure that your SSH keys are set up properly.\nPrivate key in <a>Eclipse SSH</a> and public key at <a>CloudBees web</a> must match!
