Added support for git HTTPS support while keeping the SSH protocol.
Updated CB Preferences panel to remove jenkins and forge access checkboxes (were not really useful).
Better error reporting when ClickStart clone fails.

--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -7,9 +7,9 @@ pref_signup=Don't have an account? <a>Sign up for free!</a>
 pref_signup_tooltip=Register for CloudBees services
 pref_validate_login=Validate
 
-pref_group_devAtCloud=DEV@cloud
-pref_enable_jaas=Access DEV@cloud Continuous Integration
-pref_enable_forge=Access Forge repositories (Git and SVN)
+pref_group_devAtCloud=Forge Source Repository Access
+pref_gitprotocol=Git protocol:
+
 pref_attach_jenkins=<a>Attach Jenkins instances NOT hosted at DEV@cloud...</a>
 pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
 
@@ -17,4 +17,4 @@ pref_group_allJenkins=All Jenkins
 pref_jenkins_refresh_enabled=Enable Jobs view auto-refresh
 pref_jenkins_refresh_interval=Jobs refresh interval (seconds)
 
-git_access_reminder=IMPORTANT! For GIT access please make sure that your SSH keys are set up properly.\nPrivate key at <a>Eclipse SSH page</a> and public key at <a>CloudBees web</a> must match!
+git_access_reminder=IMPORTANT! For Git over SSH access please make sure that your SSH keys are set up properly.\nPrivate key at <a>Eclipse SSH page</a> and public key at <a>CloudBees web</a> must match!\nPlease restart Eclipse after changing the SSH keys.
