Cleaned up toolkit to remove deprecated features (run@cloud, clickstart etc). Updated branding to new graphics. Fixed to work with the latest APIs and Jenkins in the Cloud.

--- a/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
+++ b/com.cloudbees.eclipse.ui/src/com/cloudbees/eclipse/ui/messages.properties
@@ -3,18 +3,13 @@ pref_description=Manage CloudBees Eclipse Toolkit settings
 pref_group_login=Login info
 pref_email=&E-mail:
 pref_password=&Password:
-pref_signup=Don't have an account? <a>Sign up for free!</a>
-pref_signup_tooltip=Register for CloudBees services
+pref_signup=Don't have an account? <a href="signup">Sign up for free!</a> Did you <a href="forgot_password">forgot your password or never had one</a>?
+pref_signup_tooltip=Register for CloudBees services or reset your password.
 pref_validate_login=Validate
 
-pref_group_devAtCloud=Forge Source Repository Access
-pref_gitprotocol=Git protocol:
-
-pref_attach_jenkins=<a>Attach Jenkins instances NOT hosted at DEV@cloud...</a>
-pref_attach_jenkins_tooltip=Click here to attach Jenkins instances
+pref_attach_jenkins=<a>Configure On-Premise Jenkins installations...</a>
+pref_attach_jenkins_tooltip=Click here to configure On-Premise installations
 
 pref_group_allJenkins=All Jenkins
 pref_jenkins_refresh_enabled=Enable Jobs view auto-refresh
 pref_jenkins_refresh_interval=Jobs refresh interval (seconds)
-
-git_access_reminder=IMPORTANT! For Git over SSH access please make sure that your SSH keys are set up properly.\nPrivate key at <a>Eclipse SSH page</a> and public key at <a>CloudBees web</a> must match!\nPlease restart Eclipse after changing the SSH keys.
