--- a/README
+++ b/README
@@ -1,24 +1,14 @@
 CloudBees Eclipse Toolkit
 
 CloudBees Eclipse Toolkit provides developer access to various CloudBees services:
- * Forge source repositories (supported Git and SVN)
- * JaaS instances
- * Jenkins/Hudson instances
+ * Jenkins instances
 
 == Setting up the development environment == 
 
-1. Download Eclipse 3.6.1 SDK from http://download.eclipse.org/eclipse/downloads/drops/R-3.6.1-201009090800/index.php
+1. Download Eclipse 4.4 SDK
 Set it as Target Platform
 
-2. We maintain compatibility for Java 6 so configure Installed JREs to have JDK 1.6 set default.
+2. We maintain compatibility for Java 7 and Java 8 so configure Installed JREs to have JDK 7 set default.
 
 3. Make sure to load cb_cleanup.xml and cb_format.xml to your eclipse formatting and cleanup settings to keep the project consistent!
 
-4. Install eGit from Helios - http://download.eclipse.org/releases/helios preconfigured update site
-
-5. Install subclipse from http://subclipse.tigris.org/update_1.6.x
-OR
-5. Install subversive/SVN from Helios update site 
-
-Please do not use subclipse and eclipse.org subversive/SVN client at the same time. 
-They don't work well together and are not designed to do so.
